--- a/Main.html
+++ b/Main.html
@@ -57,7 +57,7 @@
 <h3>Magic Website ©</h3>
 </div>
 <body>
-    <img src="Logo.png" style="max-width:10%" alt="Sample picture"> <a href="Main.html">HomePage</a> <a href="Colors.html">Colors</a> <a href="Text.html">Text</a>
+    <img src="Logo.png" style="max-width:10%" alt="Sample picture"> <a href="Main.html">HomePage</a> <a href="Colors.html">Colors</a> <a href="Warning.html">Special</a>
 
     <label for="file">Work in progress:</label>
     <progress id="qw" max="100" value="20">20%</progress>
