--- a/Warning.html
+++ b/Warning.html
@@ -8,5 +8,5 @@
 <body>
     <h1>WARNING</h1>
     <p>this section of the website may contain epilepsy. if you suffer from epilepsy do not go to this section.</p>
-    <button style="cursor:crosshair" href="Special.html">Continue</a>
+    <a style="cursor:crosshair" href="Special.html">Continue</a>
 </html>
